<resources>
    <string name="app_name">SYUMA</string>
    <string name="join_as">Join As</string>
    <string name="parents_self">Parents/Self</string>
    <string name="next">Next</string>
    <string name="parents">Parent</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_tutor_by">Find Tutors By</string>
    <string name="speciality">Speciality</string>
    <string name="classs">Class</string>
    <string name="name">Name</string>
    <string name="find_coachings">Find Coaching</string>
    <string name="near_you">Near you</string>
    <string name="proceed">Proceed</string>
    <string name="search_speciality_here">Search Speciality Here</string>
    <string name="select_speciality">Please Select at-least one Class</string>
    <string name="sorry">Sorry!</string>
    <string name="recommended_teachers">Recommended Teachers</string>
    <string name="popular_teachers">Popular Teachers</string>
    <string name="consulation_fee">Monthly</string>
    <string name="about_doc">About the Teacher</string>
    <string name="tution_hours">Tuition Hours</string>
    <string name="request_tuition">Request Tuition</string>
    <string name="select_slot">Select Time Slot</string>
    <string name="search_teachers">Search Teachers</string>
    <string name="no_teachers_found">No Teacher Found</string>
    <string name="full_name">Full Name</string>
    <string name="enterFullName">Enter Full Name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="dob">DOB</string>
    <string name="your_dob">Enter DOB</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="you_want_to_update_on_whatsapp">Update me on WhatsApp</string>
    <string name="confirm">Confirm</string>
    <string name="thank_you_for_using_our_services">Thank you for using our services.</string>
    <string name="tuition_details">Tuition Details</string>
    <string name="per_visit">Per Visit</string>
    <string name="tuition_book_for">Tuition Book for</string>
    <string name="parent_s_information">Parent\'s Information</string>
    <string name="view_profile">View Profile</string>
    <string name="request_time">Request Time</string>
    <string name="accepted_time">Accepted at</string>
    <string name="change_teacher">Change Teacher</string>
    <string name="try_again">try again</string>
    <string name="logout">Logout</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="tuition_reqiest">Tuition Request</string>
    <string name="cancel_tuition">Cancel Tuition</string>
    <string name="default_notification_channel_id">com.mytuition</string>
    <string name="tuition_history">Tuition History</string>
    <string name="submit">Submit</string>
    <string name="write_cancel_reason">Write cancel Reason</string>
    <string name="cancel_tuition_request">Cancel Tuition Request</string>
    <string name="find_top_coaching_near_you">Find Top Coaching near you</string>
    <string name="see_what_our_existing_users_have_to_say_about_us">See what our existing users have to say about us</string>
    <string name="testimonials">Testimonials</string>
    <string name="write_review">Write Review</string>
    <string name="write_review_here">write review here</string>
    <string name="syuma">S Y U M A</string>
    <string name="requests">Requests</string>
    <string name="profile">profile</string>
    <string name="cancel">Cancel</string>
    <string name="highest_education">Highest Education</string>
    <string name="title_activity_teacher_signup">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="slots">Slots</string>
    <!--    Test Ad Id-->
    <string name="adaptive_banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="msg_subscribed">subscribe\\</string>
    <string name="msg_subscribe_failed">not subscribe</string>
    <string name="view_all_tuitions">View All Tuitions</string>
    <string name="admin_controller">Admin Controller</string>
    <string name="no_internet">No Internet connection</string>
    <string name="say_something_about_us">Say something about us</string>
    <string name="s_y_u_m_a">S Y U M A</string>
    <string name="top_teachers">Top Teachers</string>
    <string name="you_have_successfully_requested_tuition">You have successfully Requested Tuition !!</string>
    <string name="view_details">View detail</string>
    <string name="video_call_request">"Request Video Call with our best teachers"</string>
    <string name="our_teacher_will_accept_your_video_call_request_and_schedule_an_online_class_with_you">"Our Teacher will accept your video call request and schedule an online class with you"</string>
    <string name="no_tuition_found">No Tuition Found for You</string>
    <string name="request_status">Request Status</string>
    <string name="parent_student">Parent/Student</string>
    <string name="join">Join</string>

    <!--    Live Ad Id-->
    <!--    <string name="adaptive_banner_ad_unit_id_test">ca-app-pub-4669458320732543/9170295624</string>-->

</resources>