<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/itemTuitionList"
            android:checked="true"
            android:icon="@drawable/ic_baseline_control_camera_24"
            android:title="@string/tuition_reqiest" />
        <item
            android:id="@+id/itemAboutUs"
            android:icon="@drawable/ic_baseline_textsms_24"
            android:title="@string/about_us" />
        <item
            android:id="@+id/itemShareApp"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share_app" />

        <item
            android:id="@+id/itemAllTuition"
            android:icon="@drawable/ic_baseline_control_camera_24"
            android:title="@string/share_app"
            android:visible="false" />

        <item
            android:id="@+id/subtitle"
            android:title="Subtitle">
            <menu>
                <item
                    android:id="@+id/itemLogout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout" />
            </menu>
        </item>

        <item
            android:id="@+id/admin"
            android:title="@string/admin_controller"
            android:visible="false">
            <menu>
                <item
                    android:id="@+id/admin_item1"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/view_all_tuitions" />
            </menu>
        </item>
    </group>
</menu>