<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="teacher"
            type="com.mytuition.models.TeacherModel" />

        <variable
            name="parent"
            type="com.mytuition.models.ParentModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.parentFragments.RequestTuitionFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BackgroundColor"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_round"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="@dimen/_20sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingStart="5dp"
                    android:text="@{teacher.name}"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="5dp"
                    android:text="@{teacher.speciality+`, `+teacher.academicInformation.highestEducation}"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView88"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/tuition_book_for"
                    android:textColor="#262E3F"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPatientName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView88"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="10dp"
                    android:text="@{parent.name}"
                    android:textColor="#00000D"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvBookAppointmentTimeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView88"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingTop="10dp"
                    android:textColor="#3F4E6E"
                    android:textSize="15sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView91"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/parent_s_information"
                    android:textColor="#262E3F"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/full_name"
                    android:textColor="#3E4D6C"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/your_name"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:text="@{parent.name}"
                    android:textColor="#3E4E6E"
                    android:textColorHint="#AAB4CD"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/mobile_number"
                    android:textColor="#3E4D6C"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:text="@{parent.mobile}"
                    android:textColor="#3E4E6E"
                    android:textColorHint="#AAB4CD"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/your_email"
                    android:textColor="#3E4D6C"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/editTextTexEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailSubject"
                    android:singleLine="true"
                    android:text="@{parent.name}"
                    android:textColor="#3E4E6E"
                    android:textColorHint="#AAB4CD"
                    android:textSize="16sp"
                    android:visibility="gone" />


                <CheckBox
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/you_want_to_update_on_whatsapp"
                    android:textColor="#3E4D6C"
                    android:textSize="15sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/round_for_search"
                    android:backgroundTint="@color/yellow"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>